refactor main design

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -160,3 +160,7 @@ a {
 .btn-info {
   @apply lg:inline-block py-2 px-6 text-sm bg-slate-200 text-gray-700 font-bold rounded-xl hover:shadow-inner focus:outline-none;
 }
+
+.container-main {
+  @apply bg-white  rounded justify-center md:max-w-[1280px] m-auto p-4;
+}
