add logout button

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -157,6 +157,11 @@ a {
   @apply lg:inline-block py-2 px-6 text-sm text-white font-bold rounded-xl bg-secondary hover:shadow-inner focus:outline-none transition duration-500 ease-in-out  transform hover:translate-x-1 hover:scale-105;
 }
 
+.btn-danger {
+  @apply lg:inline-block py-2 px-6 text-sm text-white font-bold rounded-xl bg-red-500 hover:shadow-inner focus:outline-none transition duration-500 ease-in-out  transform hover:translate-x-1 hover:scale-105;
+}
+
+
 .btn-info {
   @apply lg:inline-block py-2 px-6 text-sm bg-slate-200 text-gray-700 font-bold rounded-xl hover:shadow-inner focus:outline-none;
 }
